[package]
name = "monkeywrench"
version = "0.1.0"
authors = ["csauve <csauve@t3hz0r.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
name = "strings"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "memoryapi"] }
